--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -109,6 +109,14 @@ a {
   padding: 24px;
   background: #FFF;
 }
+
+.marquee {
+  width: 100%;
+  font-size: 10em;
+  height: 100%;
+  color: white;
+}
+
 #face {
   display: flex;
   flex-direction: column;
